@@ -37,6 +37,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       16x16 px, that's big enough.
     - src/onmainwindow.cpp: remove left-over debug test message.
     - {unixhelper.{cpp,h},x2goclient.pro{,.maemo}}: add unixhelper stub.
+    - unixhelper.{cpp,h}: implement cleanup program for process group.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
